--- a/Koshla/app/src/main/res/layout/activity_main.xml
+++ b/Koshla/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,15 @@
     android:layout_height="match_parent"
     tools:context=".activity.MainActivity">
 
+    <androidx.appcompat.widget.AppCompatTextView
+        android:layout_width="145dp"
+        android:layout_height="22dp"
+        android:text="Enter Your City Name"
+        app:layout_constraintBottom_toTopOf="@+id/appCompatEditText"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <AutoCompleteTextView
         android:id="@+id/appCompatEditText"
         android:layout_width="match_parent"
@@ -23,6 +32,7 @@
         android:layout_height="wrap_content"
         android:background="@color/colorPrimary"
         android:text="Submit"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
