--- a/Koshla/app/src/main/res/layout/activity_weather.xml
+++ b/Koshla/app/src/main/res/layout/activity_weather.xml
@@ -40,6 +40,7 @@
         android:layout_height="wrap_content"
         android:background="@color/colorPrimary"
         android:text="Show More"
+        android:id="@+id/showMore"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
