Added the bottom successfully

--- a/Koshla/app/src/main/res/layout/activity_weather.xml
+++ b/Koshla/app/src/main/res/layout/activity_weather.xml
@@ -41,6 +41,7 @@
         android:background="@color/colorPrimary"
         android:text="Show More"
         android:id="@+id/showMore"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
